Bug 692355 - comment out nodes.fallback_node in example config files; r=telliott

--- a/etc/memcachedldap.conf
+++ b/etc/memcachedldap.conf
@@ -86,7 +86,8 @@ pool_recycle = 3600
 cache_servers = 127.0.0.1:11211
 
 [nodes]
-fallback_node = http://localhost:5000/
+# You must set this to your client-visible server URL.
+# fallback_node = http://example.com/path/to/sync
 
 #
 # smpt host used to send e-mails
