--- a/etc/ldap.conf
+++ b/etc/ldap.conf
@@ -30,7 +30,8 @@ cache.data_dir = /tmp/cache/data
 cache.lock = /tmp/cache/lock
 
 [nodes]
-fallback_node = http://localhost:5000/
+# You must set this to your client-visible server URL.
+# fallback_node = http://example.com/path/to/sync
 
 [smtp]
 host = localhost
