--- a/etc/memcached.conf
+++ b/etc/memcached.conf
@@ -22,7 +22,8 @@ pool_size = 100
 pool_recycle = 3600
 
 [nodes]
-fallback_node = http://localhost:5000/
+# You must set this to your client-visible server URL.
+# fallback_node = http://example.com/path/to/sync
 
 [smtp]
 host = localhost
