Bug 766010 - include example [reset_codes] config; r=telliott

--- a/etc/sync.conf
+++ b/etc/sync.conf
@@ -42,3 +42,8 @@ vendor = mozilla
 version = 0
 device_version = 1.3
 product = weave
+
+[reset_codes]
+backend = services.resetcodes.rc_sql.ResetCodeSQL
+sqluri = sqlite:////tmp/test.db
+create_tables = True
