Bug 689511 - document allow_new_users option in example config files

--- a/etc/ldap.conf
+++ b/etc/ldap.conf
@@ -28,6 +28,8 @@ pool_recycle = 3600
 cache.type = file
 cache.data_dir = /tmp/cache/data
 cache.lock = /tmp/cache/lock
+# Uncomment the next line to disable creation of new user accounts.
+#allow_new_users = false
 
 [nodes]
 # You must set this to your client-visible server URL.
