--- a/etc/memcached.conf
+++ b/etc/memcached.conf
@@ -20,6 +20,8 @@ backend = services.user.sql.SQLUser
 sqluri = mysql://sync:sync@localhost/sync
 pool_size = 100
 pool_recycle = 3600
+# Uncomment the next line to disable creation of new user accounts.
+#allow_new_users = false
 
 [nodes]
 # You must set this to your client-visible server URL.
