--- a/etc/memcachedldap.conf
+++ b/etc/memcachedldap.conf
@@ -85,6 +85,9 @@ pool_recycle = 3600
 # cache server used by the ldap connector
 cache_servers = 127.0.0.1:11211
 
+# Uncomment the next line to disable creation of new user accounts.
+#allow_new_users = false
+
 [nodes]
 # You must set this to your client-visible server URL.
 # fallback_node = http://example.com/path/to/sync
