--- a/etc/sync.conf
+++ b/etc/sync.conf
@@ -25,6 +25,8 @@ sqluri = sqlite:////tmp/test.db
 pool_size = 100
 pool_recycle = 3600
 create_tables = true
+# Uncomment the next line to disable creation of new user accounts.
+#allow_new_users = false
 
 [nodes]
 # You must set this to your client-visible server URL.
